# ALMASim

./: .bumpversion.cfg  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  CODE_OF_CONDUCT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dask  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_DOCKER.md  README_REFACTOR.md  TNG_Explorer.ipynb  alma.all.cfg  alma_cycle9.cfg  alma_simulator.py  alminer_query.py  apsynthinker.ipynb  clean_simulator.py  cleanup.sh  codecov.yaml  coverage.json  coverage.xml  create_models.sh  create_simulations.sh  create_tclean_csv.py  dask-docker-compose.yml  dask_tester.ipynb  dask_tester.py  debugger.ipynb  docker-compose.prod.yml  docker-compose.yml  fetchall.sh  generate_gaussian_models.py  (+36 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint_and_test.yml  python-package.yml  python-publish.yml  python-tests.yml  qodana_code_quality.yml  release.yml
OLD/: TNG_Explorer.ipynb  TestCubes.py  alma_simulator.py  clean_simulator.py  create_models.sh  create_simulations.sh  generate_TNG_models.py  idea_tester.ipynb  requirements.txt
almasim/: __init__.py  _run.py  _run.pyi  alma.py  alma.pyi  astro.py  astro.pyi  interferometer-profiler.py  interferometer.py  interferometer.pyi  ninterferometer.py  nskymodels.py  profiler.py  skymodels-profiler.py  skymodels.py  skymodels.pyi  ui-profiler.py  ui.py  ui.pyi
almasim/brightnes/: calibrated_lines.csv  plot_lines.py  temporary_update.csv
almasim/experimental/: Datacube_Analisys.ipynb  Datacube_Analisys_v2.ipynb  Datacube_Analysis_v3.ipynb  Fits_modifier.py  Params_Generator.ipynb  SEDPLOT.ipynb  Script_comparison.ipynb  datacubes_plots.ipynb  molecular_cloud_generator.py  process_spectral_data.ipynb  renaming.ipynb  sed-thinking.py  test-async.py  tng_tester.py
almasim/metadata/: J0842+1218C1_uid___A001_X1590_X1ef6.csv  J0842+1218_uid___A001_X2fb_X3ec.csv  J0842+1218_uid___A001_X885_X36b.csv  J1306+0356C1_uid___A001_X1590_X1f02.csv  J1306+0356_uid___A001_X1273_X374.csv  J1306+0356_uid___A001_X2fb_X40c.csv  J1319+0950C1_uid___A001_X1590_X1f06.csv  J1319+0950_uid___A001_X1465_X380c.csv  J1319+0950_uid___A002_X391d0b_X1e.csv  J1319+0950_uid___A002_X7fb989_X18.csv  J1509-1749_uid___A001_X1465_X3824.csv  J1509-1749_uid___A001_X1590_X11c6.csv  J1509-1749_uid___A001_X1590_X11de.csv  J1509-1749_uid___A001_X1590_X11e2.csv  J1509-1749_uid___A001_X2fb_X414.csv  (+27 more)
antenna_config/: antenna.cfg  antenna_coordinates.csv
app/: __init__.py  alma_utils.py  astro_utils.py  main.py  skymodel_utils.py
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: __init__.py  download.py  imaging.py  metadata.py  simulation.py  visualizer.py
backend/app/core/: __init__.py  config.py  dependencies.py  path_utils.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  download.py  imaging.py  metadata.py  simulation.py
backend/app/services/: __init__.py  download_service.py  metadata_service.py  simulation_service.py  status_store.py
backend/database/: __init__.py  config.py  csv_importer.py  init.sql  migrate_add_columns.py  models.py  service.py  startup.py
backend/outputs/: sim_params_0.txt
brightnes/: calibrated_lines.csv  calibrated_lines2.csv  calibration_FIR(GHz).csv  calibrations_FIR(GHz).csv  calibrations_FIR.csv  line_emission.csv  rest_freq.csv  temporary.csv  temporary_update.csv
devops/: TNG_Explorer.ipynb  create_observation_metadata.py  debugger.ipynb  hif_makeimlist.py  idea_tester.ipynb  imageparams_base.py  metadata_crator.ipynb  notes.txt  obs_configurations.csv  resolve_sim_creator.ipynb  run_simulations.sh
docs/: README.md  background.md  compute.md  downloads.md  frontend.md  imaging.md  index.rst  interferometry.md  metadata.md  msv2_realism_plan.md  noise.md  requirements.txt  simalma_fidelity_plan.md  simulation.md  skymodels.md
examples/: README.md  archive_ms_cli.py  download_products_cli.py  download_products_notebook.ipynb  e2e_archive_pipeline.py  imaging_cli.py  query_metadata_cli.py  query_metadata_notebook.ipynb  staged_pipeline_cli.py  staged_pipeline_notebook.ipynb
experimental/: ATMOS.py  Function.ipynb  Luminosity-to-jy-linename.ipynb  MODELF1.py  NEW-TEST.ipynb  Prova Query.ipynb  Query_Distribution.ipynb  SED.ipynb  Sed-plot.ipynb  Test luminosity functions.ipynb  alvi-alma-query.ipynb  antenna-generator.ipynb  antenna.cfg  apsynthinker.ipynb  brightness_sampler.ipynb  conversione.ipynb  iconic_hubble_images.py  luca-distribution-sampler.ipynb  luminosity_comparison.txt  luminosity_comparison2.txt  metadata-tester.ipynb  metadata.csv  phaseML.py  read-csv.ipynb  sdss_retrieval.ipynb  sed-thinking.py  simulator-tester.ipynb  tester.ipynb  tester.py  tng-tester.ipynb
frontend/: ._frontend.py  .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  app.config.timestamp_1762815997166.js  app.config.ts  frontend.py  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
metadata/: AGN_all_bands.csv  Active_galaxies_metadata.csv  Active_galaxies_metadata1.csv  Elias27_metadata.csv  QSO_metadata.csv  agn.csv  alma_obs_lenses.pd  alvi_test_qso_metadata.csv  line_emission.csv  qso_meta.csv  targets_qso.csv  test.csv  test1.csv  test2.csv  test_qso_metadata.csv
old/: main.py  obs_configurations.csv  simulator.py  skymodels.py  ui.py
tests/: LEGACY_TESTS.md  README.md  conftest.py  test_alma.py  test_alma_utils.py  test_astro.py  test_astro_utils.py  test_frontend.py  test_interferometer.py  test_main.py  test_services_simulation.py  test_skymodel.py  test_skymodels.py  test_ui.py
utililty/: generate_gaussian_params.py  test.py
utility/: alma.py  astro.py  compute.py  interferometer.py  plotting.py  skymodels.py  test.py
(+287 files in other folders)
