[tool.poetry]
name = "almasim"
version = "2.1.10"
description = "An ALMA Simulation package for a more civilized era."
authors = ["Michele Delli Veneri <micheledelliveneri@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/MicheleDelliVeneri/ALMASim"
homepage = "https://github.com/MicheleDelliVeneri/ALMASim"
documentation = "https://almasim.readthedocs.io/en/latest"
packages = [{include = "almasim", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
astropy = "*"
asyncssh = "*"
pyvo = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
tqdm = "*"
scipy = "*"
h5py = "*"
kaggle = "*"
dask = "*"
dask-expr = "*"
dask-jobqueue = "*"
distributed = "*"
astromartini = "*"
Hdecompose = "*"
paramiko = "*"
pysftp = "*"
tenacity = "*"
nifty8 = "*"
setuptools = "*"
multiprocess = "*"
scikit-image = "*"
imagecodecs = "*"



[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
mypy = "*"
black = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
httpx = "*"
pydantic-settings = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
httpx = "*"
pydantic-settings = "*"
